# mini-project-mobio

./: .env  Dockerfile  Dockerfile-release  README.md  app_journey_builder_api.py  conver_c.py  k8s-Jenkinsfile  pyproject.toml  setup.py  sonar-project.properties  test.env
configs/: __init__.py
src/apis/: __init__.py
src/apis/v1_0/: __init__.py  blueprints_api.py
src/common/: validate.py
src/controllers/: email_controller.py  example_controller.py
src/controllers/user/: user_controller.py  user_mobio_controller.py
src/models/: email_model.py
src/modules/: db.py  env.py
src/workers/: consumer.py  ex-schedule.py  producer.py  testdb.py
tests/: test_email_post.py
yaml/BASE/: 0_script_init_deploy.yaml  deploy_jo_app_api.yaml
