[project]
name = "mini-project-mobio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "duong", email = "vtduong00116@gmail.com"},
]
dependencies = [
    "mobio-base-sdk==1.0.14",
    "mobio-admin-sdk>=1.0.15",
    "python-dateutil>=2.9.0.post0",
    "m-utilities>=1.0.13",
    "pydantic>=2.11.4",
    "m-scheduler-partitioning>=0.1.14",
    "m-kafka-sdk-v2>=1.0.6",
    "bson>=0.5.10",
    "pymongo>=4.12.1",
    "types-confluent-kafka>=1.3.1",
    "faker>=37.1.0",
    "ruff>=0.11.8",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}



[tool.ruff]
# Bật các rule cơ bản: lỗi cú pháp, style, bug, import
select = [
    "F",   # Pyflakes: lỗi rõ ràng (biến chưa khai báo, chia cho 0, v.v.)
    "E",   # PEP8 style errors
    "W",   # PEP8 style warnings
    "I",   # isort: sắp xếp import
    "B",   # Bugbear: bug tiềm ẩn
    "UP"   # Pyupgrade: cú pháp cũ, viết lại cho Python mới hơn
]

# Loại trừ một số rule không quá quan trọng (tuỳ chọn)
ignore = ["E501" ,"I001" , "UP009" , "B904"]

# E501: dòng quá dài (>79 ký tự) , 
# I001: không sắp xếp import
# UP009: comment không cần  | # -*- coding: utf-8 -*-

# B904: Lỗi khi sử sụng raise Exception không from ...


# Tuỳ chọn: phiên bản Python bạn dùng
#target-version = "py310"

# Thư mục chứa mã nguồn
src = ["src"]
